Deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nagi-deployment
  namespace: nagi
spec:
  selector:
    matchLabels:
      app: nagi
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nagi
    spec:
      containers:
      - name: nagi
        image: 349948765351.dkr.ecr.ap-south-1.amazonaws.com/nagi:latest
        ports:
        - containerPort: 80
